fix: исправить логику получения статистических данных (Diploma.Stage2)